# dyadikos-rs

./: .build.yml  .gitignore  Cargo.toml  scene.hjson
core/: Cargo.toml  test.json
core/src/: lib.rs  main.rs  math.rs  primitive.rs  stage.rs
editor/: Cargo.toml
editor/src/: main.rs
src/: lib.rs  main.rs  math.rs  primitive.rs  stage.rs
