[package]
name = "dyadikos"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
miniquad = "=0.3.0-alpha.46"
rayon = "1.5.1"
legion = { git = "https://github.com/amethyst/legion" }
yaks = "0.1.0"
rand = "0.8.5"
glam = { version = "*", features = ["serde", "glam-assert"] }
image = "*"

