[package]
name = "dyadikos"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
miniquad = "=0.3.0-alpha.46"
rayon = "1.5.2"
legion = { git = "https://github.com/amethyst/legion" }
yaks = "0.1.0"
rand = "0.8.5"
nalgebra = { version = "0.30.1", features = ["serde-serialize"] }
image = "*"
gltf = "1.0.0"
