[package]
name = "dyadikos-editor"
version = "0.0.1"
edition = "2021"

[dependencies]
dyadikos = { path = "../core" }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
miniquad = "0.3.0-alpha.46"
anyhow = "*"
egui = "0.18.0"
egui-miniquad = { git = "https://github.com/not-fl3/egui-miniquad" } 
hecs = { version = "0.7.6", features = ["row-serialize"] }
nalgebra = { version = "0.31.0", features = ["serde-serialize"] }

