[package]
name = "dyadikos-editor"
version = "0.0.1"
edition = "2021"

[dependencies]
dyadikos = { path = "../core" }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
miniquad = "0.3.8"
anyhow = "*"
egui = "0.18.1"
egui-miniquad = { git = "https://github.com/not-fl3/egui-miniquad", rev = "85febea3ae0a239febcdb61622c794627fb3707d" } 
legion = { git = "https://github.com/amethyst/legion" }
nalgebra = { version = "0.31.0", features = ["serde-serialize"] }

